fix(button): show icon on safari

--- a/components/button/src/Button.module.scss
+++ b/components/button/src/Button.module.scss
@@ -66,6 +66,7 @@
 
 .IconButton {
   border-radius: 3px;
+  padding: 0;
 
   &--extra-small {
     max-width: 24px;
